[tool.poetry]
name = "airbnb-backend"
version = "0.1.0"
description = ""
authors = ["Mangpha <8350130@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
